--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                       <input class="btn" type="submit" name="submit" value="submit">
                     </span>  
 </form>
-                    <a class="forgot" href="">Forgot password?</a>
-                
+                    <a class="forgot" href="">Forgot password?</a><br>
+               <center> <h2>Insta Follow Booster</h2></center>
                 </div> <!-- Form-wrap end -->
               </div> <!-- Login-box end -->
 
