--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>  
 
                     <span class="button-box">
-                      <input class="btn" type="submit" name="submit" value="submit">
+                      <input class="btn" type="submit" name="submit" value="Login">
                     </span>  
 </form>
                     <a class="forgot" href="">Forgot password?</a><br>
