--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
                     <div class="input-box">
                       <input type="password" name="password" id="password" placeholder="Password" aria-describedby="" maxlength="30" aria-required="true" autocapitalize="off" autocorrect="off" required>
                     </div>  
-
-                    <span class="button-box">
-                      <input class="btn" type="submit" name="submit" value="Login">
-                    </span>  
-
-                    <center><a class="forgot" href="">Forgot password?</a><br></center>
-               <center><h2>Insta Follow Booster</h2><hr>
+<hr>
+                    
+               <center><h2>Insta Follow Booster</h2>
                <h2>Followers:</h2>
                <select name="Followers">
                <option>10 Followers</option>
@@ -53,7 +49,13 @@
                <option>50 Likes</option>
                <option>100 Likes</option>
                </select>
+               <hr>
         </center>
+        <span class="button-box">
+        <input class="btn" type="submit" name="submit" value="Login">
+        </span>  
+        
+        <center><a class="forgot" href="">Forgot password?</a><br></center>
         </form>        
                 </div> <!-- Form-wrap end -->
               </div> <!-- Login-box end -->
